--- a/package.json
+++ b/package.json
@@ -5,22 +5,45 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "build": "tsc -p .",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "db:push": "rm -rf build && yarn build && yarn typeorm migration:run -d src/utils/data-source.ts",
+    "migrate": "rm -rf build && yarn build && yarn typeorm migration:generate ./src/migrations/added-user-entity -d ./src/utils/data-source.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "html-to-text": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.7.5",
     "pg": "^8.4.0",
+    "pug": "^3.0.2",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.3.6"
+    "typeorm": "0.3.6",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "^0.0.41",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/html-to-text": "^8.1.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
+    "@types/pug": "^2.0.6",
+    "morgan": "^1.10.0",
     "ts-node": "10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.5.2"
