--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "rm -rf build && yarn build && yarn typeorm migration:run -d src/utils/data-source.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1130.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "config": "^3.3.7",
@@ -22,11 +23,13 @@
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
     "pg": "^8.4.0",
     "pug": "^3.0.2",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.30.4",
     "typeorm": "0.3.6",
     "zod": "^3.14.4"
   },
@@ -40,9 +43,11 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
+    "@types/sharp": "^0.30.2",
     "morgan": "^1.10.0",
     "ts-node": "10.7.0",
     "ts-node-dev": "^1.1.8",
