--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '6500:5432'
     volumes:
-      - progresDB:/data/postgres
+      - progresDB:/var/lib/postgresql/data
     env_file:
       - ./.env
 
